<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#4F9BD3">

    <TextView
        android:id="@+id/tvTextoRecibido2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:hint="@string/mostrar_texto_fragment_1"/>

    <EditText
        android:id="@+id/etInput2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intro_text_para_fragment_1"
        android:inputType="text"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/btnEviar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enviar_fragment_1"/>

</LinearLayout>