<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#AE54B35D">

    <TextView
        android:id="@+id/tvTextoRecibido1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:textSize="16sp"
        android:hint="@string/texto_desde_fragment_2"/>

    <EditText
        android:id="@+id/etInput1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/intro_texto_para_fragment_2"
        android:inputType="text"
        android:autofillHints=""

        />

    <Button
        android:id="@+id/btnEnviar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/enviar_fragment_2"/>

</LinearLayout>